--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pumo Pumo !</title>
-    <link rel="icon" type="image/x-icon" href="/client/src/assets/pumo.jpeg" />
+    <link rel="icon" type="image/png" href="src/assets/pumo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap"
       rel="stylesheet"
