--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      window.onerror = function(msg, url, line, col, err) {
+        var d = document.getElementById('_err');
+        if (!d) { d = document.createElement('pre'); d.id='_err'; d.style.cssText='position:fixed;top:0;left:0;right:0;bottom:0;z-index:99999;background:#111;color:#f55;padding:40px;font:16px monospace;white-space:pre-wrap;overflow:auto;'; document.body.appendChild(d); }
+        d.textContent += 'ERROR: ' + msg + '\nat ' + url + ':' + line + ':' + col + '\n' + (err && err.stack ? err.stack : '') + '\n\n';
+      };
+      window.addEventListener('unhandledrejection', function(e) {
+        var d = document.getElementById('_err');
+        if (!d) { d = document.createElement('pre'); d.id='_err'; d.style.cssText='position:fixed;top:0;left:0;right:0;bottom:0;z-index:99999;background:#111;color:#f55;padding:40px;font:16px monospace;white-space:pre-wrap;overflow:auto;'; document.body.appendChild(d); }
+        d.textContent += 'UNHANDLED REJECTION: ' + (e.reason && e.reason.stack ? e.reason.stack : e.reason) + '\n\n';
+      });
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
